# instsci-workflow

./: .gitignore  CONTRIBUTING.md  FAQ.md  LICENSE  NOTICE_MODIFIED.md  README.md  README_REVIEW.md  package_manifest.json  pyproject.toml
.github/workflows/: ci.yml
docs/: InstSci_user_guide_zh.md  search-v2-usage.md  skill-distribution-migration-20260713.md  upstream-regression-migration-20260713.md
instsci/: __init__.py  auth.py  browser_doctor.py  chinese_download_quota.py  chinese_literature.py  cli.py  cloakbrowser_compat.py  cnki_session.py  config.py  evidence_store.py  fetcher.py  http_utils.py  institution_identity.py  job_store.py  mcp_server.py  models.py  multi_search.py  pdf_bytes.py  profile_health.py  public_audit.py  publisher_access.py  publisher_batch.py  publisher_matrix.py  publisher_pdf_router.py  publisher_profiles.py  schools.py  search_benchmark.py  search_live_eval.py  search_pipeline.py  session_broker.py  session_store.py  wanfang_session.py  zotero_mcp.py
instsci/data/: institutional_identity_policy.json  public_data_policy.json  publisher_access_catalog.json  publisher_browser_verification_matrix.json  publisher_browser_verification_matrix.md  publisher_capability_matrix.json  publisher_carsi.json  webvpn.json
instsci/extractors/: html_extractor.py  pdf_extractor.py
instsci/sources/: arxiv.py  crossref.py  elsevier_api.py  openalex.py  semantic_scholar.py  unpaywall.py
instsci/tests/: __init__.py  project_guards.py  test_acs_batch.py  test_auth_cookie_store.py  test_chinese_batch_behavior.py  test_chinese_batch_safety.py  test_chinese_download_quota.py  test_chinese_literature.py  test_cloakbrowser_compat.py  test_cnki_session.py  test_config_paths.py  test_contract_fixtures.py  test_elsevier_api.py  test_evidence_store.py  test_fetch_result.py  (+20 more)
scripts/: Install-InstSci.ps1
skill/: SKILL.md
(+24 files in other folders)
