[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "instsci"
version = "0.1.1"
description = "Academic paper fetcher with institutional access support"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "cloakbrowser>=0.3.31",
    "pymupdf>=1.23.0",
    "mcp[cli]>=1.0.0",
    "pycryptodome>=3.15.0",
    "pyzotero>=1.6.11",
]

[project.scripts]
instsci = "instsci.cli:app"
instsci-mcp = "instsci.mcp_server:main"

[tool.setuptools.packages.find]
include = ["instsci*"]

[tool.setuptools.package-data]
instsci = ["data/*.json"]
