[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "instsci"
version = "0.2.0a2"
description = "Academic paper fetcher with institutional access support"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE", "NOTICE_MODIFIED.md"]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "cloakbrowser>=0.3.31",
    "pymupdf>=1.23.0",
    "mcp[cli]>=1.0.0",
    "pycryptodome>=3.15.0",
    "pyzotero>=1.6.11",
]

[project.scripts]
instsci = "instsci.cli:app"
instsci-mcp = "instsci.mcp_server:main"

[project.urls]
Homepage = "https://github.com/deathcats4/instsci-workflow"
Repository = "https://github.com/deathcats4/instsci-workflow"
Issues = "https://github.com/deathcats4/instsci-workflow/issues"

[tool.setuptools.packages.find]
include = ["instsci*"]
exclude = ["instsci.tests*"]

[tool.setuptools.package-data]
instsci = ["data/*.json"]
